cabal-version: 1.18
name: recursion-scheme-generator
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2017-2019 Vanessa McHale
maintainer: vamchale@gmail.com
author: Vanessa McHale
synopsis: Recursion scheme generator
description:
    Recursion scheme generator with web frontend, written with Miso and Madlang
category: Web
build-type: Simple
extra-source-files:
    mad-src/recursion-schemes.mad
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/vmchale/recursion-scheme-generator

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

executable recursion-scheme-generator
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    build-depends:
        base >=4.7 && <5,
        miso >=0.9.0.0,
        madlang >=4.0.0.0,
        text -any,
        containers -any,
        file-embed -any

    if flag(development)
        ghc-options: -Werror
